--- a/index.html
+++ b/index.html
@@ -4,15 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/9e48a2a952.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/52a6a40351.js" crossorigin="anonymous"></script>
     <title>Rock Paper Scissors... the revenge!</title>
 </head>
+<style>
+  button {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    background-color: black;   
+  }
+
+  i {
+      color: white;
+    }
+</style>
 <body class="bg-dark text-white">
 
     <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold">Rock Paper Scissors... the revenge!</h1>
-              <p>To start a game open the console and type "game()" you will have 5 round to beat the computer, good luck and stay tunned for more update!</p>
+      <h1 class="display-5 fw-bold">Rock Paper Scissors...<br>the revenge!</h1>
+      <p id="scoreInfo">Choose your symbol and let's fight the computer!</p>
+      <p id="scoreMessage">First to score 5 points wins the game</p>
+
+      <button id="Rock">
+        <i class="fa-solid fa-hand-back-fist fa-2xl"></i>
+      </button>
+      <button id="Paper">
+        <i class="fa-solid fa-hand fa-2xl"></i>
+      </button>
+      <button id="Scissors">
+        <i class="fa-solid fa-hand-scissors fa-2xl"></i>
+      </button>
+
+      <br>
+      <div style="display: flex; flex-direction: row; align-content: center; justify-content: space-evenly;">
+        <div>
+          <p id="playerSign">?</p>
+          <p id="playerScore">Player: 0</p>
         </div>
+        <div>
+          <p id="computerSign">?</p>
+          <p id="computerScore">Computer: 0</p>
+        </div>
+      </div>
+
+      <p id="endgameMsg">Good luck!</p>
+      <button id="restartBtn"><i class="fa-solid fa-repeat fa-2xl"></i></button>
+      
+    </div>
 
     <script src="script.js"></script>
 
